--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Flatiron Task Lister</title>
   <link rel="stylesheet" href="./style.css">
+  <script src="./src/index.js" defer ></script>
+
 </head>
 <body>
   <div id="main-content">
@@ -19,9 +21,7 @@
       <h2>My Todos</h2>
       <ul id="tasks">
       </ul>
-    </div>
-
-    <script src="./src/index.js"></script>
+    </div>    
   </div>
 
 </body>
